follow removal of analyzer-shallow